# missour.ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Learnings.md  ProdTesting.md  README.MD  README.md  backend-dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  planning.md  pyproject.toml  server-setup.sh  tasks.py
docker/: certbot-renew.sh  entrypoint.dev.sh  entrypoint.sh  nginx-entrypoint.sh
docs/planning/: report_writing_initial_release_bug_fix_plan.md  report_writing_initial_release_prod_testing.md
frontend/: package-lock.json  package.json  vite.config.js  vitest.setup.js
frontend/__tests__/: add-topics.test.jsx  generate-report-page-section.test.jsx  new-report-contents.test.jsx  update-existing-report.test.jsx
frontend/src/: analyze-audio-page-section.jsx  create-new-report.jsx  dashboard.jsx  generate-report-page-section.jsx  new-report-contents.jsx  topic-selector.jsx  update-existing-report.jsx  view-topics.jsx  view-transcript-chunk-page-section.jsx
missourai_django/: manage.py
missourai_django/transcription/: admin.py  (+9 more)
ml_env/: notes.md  planning.md  pyproject.toml
ml_env/data/: average_txt_size.sh  ded-chunked-recursive-character-tagged.csv  ded-chunked-recursive-character.csv  ded-chunked-semantic-percentile-tagged.csv  ded-chunked-semantic-percentile.csv  ded-chunked.csv  ded.txt  deep_dive_evals.csv  deep_dive_evals_annotated.csv  dese-1.txt  dese-2.txt  dese-3.txt  dese-3b.txt  dese-4.txt  dhewd-dci.txt  dhewd-pt1.txt  dhewd-pt2.txt  dor-1.txt  dor-2.txt  dss-non-medicaid-pt1.txt  dss-non-medicaid-pt2-chunked-recursive-character-tagged.csv  dss-non-medicaid-pt2-chunked-recursive-character.csv  dss-non-medicaid-pt2-chunked-semantic-percentile-tagged.csv  dss-non-medicaid-pt2-chunked-semantic-percentile.csv  dss-non-medicaid-pt2-chunked-tagged.csv  dss-non-medicaid-pt2-chunked.csv  dss-non-medicaid-pt2.txt  ga-public-defenders.txt  hb-dmh-p1.txt  hb-public-defender.txt  jud.txt  ltgov-dhss-p1.txt  ltgov-dhss-p2.txt  ltgov-sos-dor-stc-lotter-dhss.txt  mhd-p1.txt  mhd-p2.txt  mhd-p3.txt  mhd-p3b.txt  sa-dese.txt  sa-dmh.txt  (+17 more)
ml_env/notebooks/: Chunking Tagging Testing.ipynb  Chunking Testing.ipynb  Tagging Testing.ipynb  Tagging Validation.ipynb
nginx/: default.conf
scripts/: inspect_tagging_llm.py
src/: chunk_manager.py  main.py  transcription_manager.py
(+54 files in other folders)
