[tool.poetry]
name = "missour-ai-ml-testing"
version = "0.1.0"
description = "ML testing environemtn for missour-ai"
authors = ["Karl Schoch <karl.schoch@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openai = "^1.45.1"
django = "^5.1.2"
uvicorn = "^0.34.0"
notebook = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
